Fix Chrome scrollbar

--- a/css/base.css
+++ b/css/base.css
@@ -11,7 +11,6 @@ a:link {
 body {
 	background-image: url("../images/stardust.png");
 	background-attachment: fixed;
-	overflow-y: hidden;
 }
 
 .title {
